@@ -1,6 +1,8 @@
 Travel::Status::DE::VRR 1.03 - Tue Sep 17 2013
 
     * Disable smartmatch warnings on perl >= 5.018
+    * Allow Travel::Status::DE::VRR::Line and TraveL::Status::DE::VRR::Result
+      to be serialized to JSON (via TO_JSON method)
 
 Travel::Status::DE::VRR 1.02 - Wed Apr 10 2013
 
